<resources>
    <string name="app_name">王炸交友</string>
    <string name="login_hint">输入手机号</string>
    <string name="pwd_hint">输入密码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="register">注册账号</string>
    <string name="code_hint">输入验证码</string>
    <string name="card_hint">输入身份证</string>
    <string name="code_text">获取验证码</string>
    <string name="register_text">注册</string>
    <string name="forget_text">修改</string>
    <string name="chongzhi">我的订单</string>
    <string name="tixian">提现记录</string>
    <string name="myliwu">我收到的礼物</string>
    <string name="liwu">我送出的礼物</string>
    <string name="login_out">退出登录</string>
    <string name="cancellation">注销</string>
    <string name="my">我的</string>
    <string name="index">首页</string>
    <string name="canji">残疾人</string>
    <string name="laonian">老年人</string>
    <string name="bangong">办公区域</string>
    <string name="my_info">查看并编辑个人信息</string>
    <string name="xiangqinjiaoyou">相亲交友</string>
    <string name="create_room">创建房间</string>
    <string name="price">输入收款金额(0元~300元，单位：元)</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="search">请输入房号搜索</string>
    <string name="level_room">离开房间</string>
    <string name="my_money">我的余额</string>
    <string name="app_back">返回</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_continue">继续</string>
    <string name="app_send">发送</string>
    <string name="app_set">设置</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>

    <!-- applet -->
    <string name="applet_secimg_title">填写验证码</string>
    <string name="applet_secimg_change">换一张图片</string>
    <string name="applet_seccode_tip">验证码不能为空</string>
    <string name="applet_seccode_fail_tip">验证码错误，请重新输入</string>

    <!-- verify -->
    <string name="verify_password_null_tip">密码不能为空，请输入密码</string>

    <!-- format -->
    <string name="fmt_date">M月d日</string>
    <string name="fmt_longdate">yyyy年M月d日</string>
    <string name="fmt_datetime" formatted="false">M月d日 %skk:mm</string>
    <string name="fmt_patime">kk:mm</string>
    <string name="fmt_longtime" formatted="false">yyyy年M月d日 %skk:mm</string>
    <string name="fmt_in60min" formatted="false">%d分钟前</string>
    <string name="fmt_justnow">1分钟内</string>
    <string name="fmt_dawn">凌晨</string>
    <string name="fmt_morning">早上</string>
    <string name="fmt_noon">中午</string>
    <string name="fmt_afternoon">下午</string>
    <string name="fmt_evening">晚上</string>
    <string name="fmt_pre_yesterday">昨天</string>
    <string name="fmt_iap_err" formatted="false">网络连接不可用，请稍候重试</string>

    <string name="hello">Hello World, SDKSampleActivity!</string>
    <string name="app_share">分享</string>

    <string name="enter">这是SDK_Sample的入口界面</string>
    <string name="reg">将该app注册到微信</string>
    <string name="goto_send">跳转到发消息界面</string>
    <string name="goto_pay">跳转到支付界面</string>
    <string name="goto_fav">跳转到收藏界面</string>
    <string name="launch_wx">启动微信</string>
    <string name="check_timeline_supported">检查是否支持发送到朋友圈</string>

    <string name="send_to_wx_title">发送到微信</string>
    <string name="get_from_wx_title">从微信接收</string>
    <string name="show_from_wx_title">显示微信请求的消息</string>
    <string name="pay_by_wx_title">通过微信支付</string>

    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>

    <string name="launch_from_wx">Launch From Weixin</string>

    <!-- WXMediaMessage -->
    <string name="input_openid">输入openid</string>
    <string name="input_scope">输入scope</string>

    <string name="send">发送到微信</string>
    <string name="receive">从微信接收</string>

    <string name="is_timeline">是否分享到朋友圈</string>
    <string name="send_text">发送文本</string>
    <string name="send_text_default">这段文字发送自微信SDK示例程序</string>

    <string name="send_img">发送图片</string>
    <string-array name="send_img_item">
        <item>发送图片的二进制数据</item>
        <item>发送图片的本地路径</item>
        <item>发送图片的URL</item>
    </string-array>
    <string name="send_img_file_not_exist">文件不存在</string>

    <string name="send_file">发送文件</string>
    <string-array name="send_file_item">
        <item>发送文件的二进制数据</item>
        <item>发送文件的本地路径</item>
    </string-array>
    <string name="send_file_file_not_exist">文件不存在</string>

    <string name="send_pic">发送照片</string>

    <string name="send_music">发送音乐</string>
    <string-array name="send_music_item">
        <item>发送音乐url</item>
        <item>发送低带宽音乐url</item>
    </string-array>

    <string name="send_video">发送视频</string>
    <string-array name="send_video_item">
        <item>发送视频url</item>
        <item>发送低带宽视频url</item>
    </string-array>

    <string name="send_webpage">发送网页</string>
    <string-array name="send_webpage_item">
        <item>发送网页url</item>
    </string-array>

    <string name="send_appdata">发送app消息</string>
    <string-array name="send_appdata_item">
        <item>发送app文件本地路径</item>
        <item>发送app二进制数据</item>
        <item>发送无附件的app</item>
    </string-array>

    <string name="send_emoji">发送表情消息</string>
    <string-array name="send_emoji_item">
        <item>发送表情本地路径</item>
        <item>发送表情二进制数据</item>
    </string-array>

    <string-array name="send_emoji_item_format">
        <item>发送GIF图片</item>
        <item>发送非GIF图片</item>
    </string-array>

    <!-- GetFromWXActivity -->
    <string name="share_text_to_weixin">回应文本到微信</string>
    <string name="share_text_default">这段文字回应自微信SDK示例程序</string>
    <string name="share_url_to_weixin">回应URL到微信</string>
    <string name="share_pic_to_weixin">回应图片到微信</string>
    <string name="share_music_to_weixin">回应音乐到微信</string>
    <string name="share_video_to_weixin">回应视频到微信</string>
    <string name="share_appdata_to_weixin">回应app消息到微信</string>

    <string name="register_as_weixin_app_sender">注册微信事件发送器</string>
    <string name="get_token_from_weixin">获取微信访问Token</string>
    <string name="unregister_from_weixin">从微信反注册</string>

    <string name="show_from_wx_tip">这个界面用于显示微信向第三方app请求显示的信息</string>

    <!-- PayActivity -->
    <string name="pay_by_wx">客户端签名微信支付</string>
    <string name="pay_by_wxap">服务器端签名微信支付</string>
    <string name="check_pay">检查微信版本是否支持支付</string>
    <string name="input_reqkey">输入reqkey</string>
    <string name="input_package_value">输入package value</string>
    <string name="input_sign">输入sign</string>
    <string name="getting_access_token">正在获取access token...</string>
    <string name="get_access_token_succ">获取access token成功</string>
    <string name="get_access_token_fail" formatted="false">获取access token失败，原因%s</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="paying">支付中</string>
    <string name="get_prepayid_succ">获取prepayid成功</string>
    <string name="get_prepayid_fail" formatted="false">获取prepayid失败，原因%s</string>


    <!--rong-->
    <string name="room_number">Room:</string>
    <string name="connection_duration">Duration</string>
    <string name="network_traffic">Traffic</string>
    <string name="waiting_user_join">Waiting for attendees...</string>
    <string name="white_board_pencil">pencil</string>
    <string name="white_board_text">text</string>
    <string name="white_board_eraser">eraser</string>
    <string name="white_board_clear">clear</string>
    <string name="white_board_add">add</string>
    <string name="white_board_delete">delete</string>

    <string name="user_video_custom">Customize video</string>

    <string name="filepath">com.lemi.interact.fileprovider</string>
</resources>
