<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/icon_mobile" />

        <EditText
            android:id="@+id/register_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/login_hint"
            android:inputType="phone"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:textColor="@color/text_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_code" />
            <EditText
                android:id="@+id/register_code"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/code_hint"
                android:inputType="number"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </LinearLayout>
        <Button
            android:id="@+id/register_code_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/code_text"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:background="#00000000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/icon_password" />

        <EditText
            android:id="@+id/register_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/pwd_hint"
            android:inputType="textPassword"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:textColor="@color/text_color"
            android:textSize="14sp" />
    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="250dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:gravity="center"-->
        <!--android:orientation="horizontal">-->

        <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:src="@mipmap/icon_card" />-->

        <!--<EditText-->
            <!--android:id="@+id/register_card"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="40dp"-->
            <!--android:hint="@string/card_hint"-->
            <!--android:paddingBottom="3dp"-->
            <!--android:paddingTop="3dp"-->
            <!--android:textColor="@color/text_color"-->
            <!--android:textSize="14sp" />-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/register_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:text="@string/register_text"
            android:textColor="@color/text_color"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>